# opendota_async

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md  publishing.md
src/opendota_async/: __init__.py  _compat.py  _hooks.py  _parse.py  _transport.py  auth.py  client.py  config.py  errors.py  models.py  pagination.py  retry.py  sync_client.py  testing.py
src/opendota_async/resources/: __init__.py  players.py
tests/: test_api_live.py  test_client_mock.py  test_models.py
