[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendota-async"
version = "0.1.0"
description = "Async OpenDota API client built on Niquests with typed models and HTTP/2–3 multiplexing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "OpenDota Async contributors" }]
keywords = ["opendota", "dota2", "async", "niquests", "api-client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = [
  "niquests>=3.18",
  "pydantic>=2.5",
]

[project.optional-dependencies]
http3 = ["niquests[http3]>=3.18"]
ws = ["niquests[ws]>=3.18"]
fast = ["orjson>=3.9", "msgspec>=0.18"]
cli = ["typer>=0.9", "rich>=13"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "responses>=0.25",
  "mypy>=1.8",
  "ruff>=0.2",
  "opendota-async[http3,ws,fast,docs]",
]

[project.urls]
Homepage = "https://github.com/opendota/opendota-async"
Documentation = "https://opendota-async.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/opendota_async"]

[tool.hatch.build.targets.sdist]
include = ["src/opendota_async", "README.md", "CHANGELOG.md", "docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
packages = ["opendota_async"]

[[tool.mypy.overrides]]
module = ["niquests.*", "urllib3_future.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
